[package]
name = "rexec"
version = "0.1.3"
authors = ["stnikiforov55 <stnikiforov@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3", features = ["thread-pool"]}
futures-util = "0.3"
tokio = { version = "0.2.22", features = ["process", "io-util", "macros", "rt-core", "time"] }
hyper = {version = "0.13", features = ["stream"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = {version = "2.33"}
log = { version = "0.4"}
simplelog = "^0.7.6"