[package]
name = "rexec"
version = "0.1.3"
authors = ["stnikiforov55 <stnikiforov@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3", features = ["thread-pool"]}
futures-util = "0.3"
tokio = { version = "1.20.1", features = ["full"] } #["process", "io-util", "macros", "time"] }
hyper = {version = "0.14", features = ["full"]}
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "^1.0.82"
clap = {version = "3.2.16", default-features = true, features = ["cargo"] }
log = { version = "0.4"}
simplelog = "^0.12.0"